shared-kustomize-bases/python/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-serve
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - image: europe-west2-docker.pkg.dev/ejmadkins-app-ops/remote-registry/hello-world
        name: hello-world
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 2000
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - NET_RAW
