shared-kustomize-bases/python/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: replace
  name: replace
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: replace
  type: LoadBalancer
